<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_pertemuan03__constraint_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTap1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="loadFragmentOne"
            android:text="@string/tab_1"
            android:textColor="#FFFFFF"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnTab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="loadFragmentTwo"
            android:text="@string/tab_2"
            android:textColor="#FFFFFF"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/user" />

    <FrameLayout
        android:id="@+id/mainFrag"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="top" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/about" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:onClick="scheduleJob"
            android:text="@string/start_job_schedule"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:onClick="cancelJob"
            android:text="@string/cancel_job_schedule"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>